<resources>
    <string name="app_name">FashionAppStaff</string>
    <string name="home">home</string>
    <string name="product">product</string>
    <string name="search">search</string>
    <string name="voucher">voucher</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="register">Register</string>
    <string name="enter_product">Enter Product</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="product_price">Product Price</string>
    <string name="enter_product_name">Enter Product Name</string>

    <string-array name="role">
        <item>Admin</item>
        <item>Staff</item>
    </string-array>
</resources>